fix header drop z-index

--- a/Bundle/UIBundle/Resources/stylesheets/front/layout/_header.scss
+++ b/Bundle/UIBundle/Resources/stylesheets/front/layout/_header.scss
@@ -14,5 +14,5 @@
 }
 
 [id^="header-drop-"] {
-  z-index: z-index(4);
+  z-index: z-index(5);
 }
